--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddSeance">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Seance" />
+        </activity>
+        <activity android:name=".Seance" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Home" />
+        </activity>
         <activity android:name=".AddClass">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Home"/>
+                android:value=".Home" />
         </activity>
         <activity
             android:name=".SignUp"
